2006-05-26  David Reveman  <davidr@novell.com>

	* plugins/compiz.schemas.in.in: Regen.

	* plugins/scale.c (SCALE_SLOPPY_FOCUS_DEFAULT): TRUE.

	* plugins/decoration.c (decorWindowUpdate): No drop-shadow decoration
	on windows with below state.

	* src/window.c (recalcWindowType): Treat dock windows with below state
	as normal windows. (bnc #178316)

	* plugins/cube.c (cubePaintTransformedScreen): Avoid optimized case
	when more than 4 cube sides.

2006-05-25  David Reveman  <davidr@novell.com>

	* plugins/compiz.schemas.in.in: Regen.

	* src/window.c (moveResizeWindow): Don't adjust position for NorthWest
	gravity. (bnc 178765) (fdo #6992)

	* plugins/compiz.schemas.in.in:
	* include/compiz.h:
	* src/event.c (handleEvent):
	* src/display.c: Add maximize_window_horizontally,
	maximize_window_vertically, toggle_window_maximized,
	toggle_window_maximized_horizontally,
	toggle_window_maximized_vertically.

	* src/event.c (handleEvent): Track changes to maximizeWindow function.

	* plugins/move.c (moveHandleMotionEvent): Make sure we have a saved
	width before we use it. Track changes to maximizeWindow function.

	* plugins/wobbly.c (wobblyHandleEvent): Handle the case where
	window is not both vertically and horizontally maximized better.

	* include/compiz.h: Add MAXIMIZE_STATE macro.

	* include/compiz.h:
	* src/window.c: Remove unmaximizeWindow and make maximizeWindow
	take a state mask so it can be used for both maximizing and
	unmaximizing.

	* plugins/switcher.c: Don't add windows that appear after the switcher
	is popped up. (bnc 178350)
	(switchWindowRemove): Don't create a new list. Instead remove
	window from the existing list and make sure we're positioned
	correctly.

2006-05-24  David Reveman  <davidr@novell.com>

	* plugins/scale.c (scaleMoveFocusWindow): When moving to window on
	left, make sure the window we're moving to is completely left of
	currently selected window. And same thing when moving to window on
	right, top, bottom.